--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JavaFX_Practice</name>
+	<name>ABGIR</name>
 	<comment/>
 	<projects/>
 	<buildSpec>
