--- a/.classpath
+++ b/.classpath
@@ -14,10 +14,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/xmlbeans-3.1.01"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/commons-collections4-4.3"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/commons-compress-1.18"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jasperreports-6.8.0"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jasperreports-fonts-6.8.0"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jasperreports-javaflow-6.8.0"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/log4j-1.2.17"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Java EE 6-Java EE 6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/itextpdf-5.5.5"/>
 	<classpathentry kind="output" path="out/production/ABGIR"/>
 </classpath>
