--- a/.classpath
+++ b/.classpath
@@ -15,6 +15,6 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/commons-collections4-4.3"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/commons-compress-1.18"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Java EE 6-Java EE 6"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/itextpdf-5.5.5"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/itextpdf-5.5.5"/>
 	<classpathentry kind="output" path="out/production/ABGIR"/>
 </classpath>
